--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "docco": "^0.7.0",
     "grunt": "^0.4.5",
-    "grunt-docco": "^0.4.0"
+    "grunt-docco": "^0.4.0",
+    "should": "^7.1.1"
   }
 }
